Add a logo to every page and change "Home" links to "Back"

--- a/dev/rp2040-adc-accuracy.html
+++ b/dev/rp2040-adc-accuracy.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>RP2040 ADC Accuracy</h1>
 <p>Getting the most out of an analog-to-digital converter</p>
 </hgroup>
@@ -18,7 +19,6 @@
 <li><a href="#problems">Problems</a></li>
 <li><a href="#fixes">Fixes</a></li>
 <li><a href="#results">Results</a></li>
-<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
