--- a/dev/rp2040-dev-setup.html
+++ b/dev/rp2040-dev-setup.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>RP2040 Windows Dev Setup</h1>
 <p>C/C++ dev environment for the Raspberry Pi Pico and RP2040, on Windows</p>
 </hgroup>
@@ -16,7 +17,6 @@
 <ul>
 <li><a href="#toolchain">Toolchain</a></li>
 <li><a href="#project">Project</a></li>
-<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
