--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 <header>
 <hgroup>
-    <h1>Len’s Stuff</h1>
-    <p>It’s gonna be the future soon</p>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
+<h1>Len’s Stuff</h1>
+<p>It’s gonna be the future soon</p>
 </hgroup>
 <nav>
 <ul>
