--- a/projects/daveybot/index.html
+++ b/projects/daveybot/index.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>DaveyBot</h1>
 <p>A computer that plays <cite>Guitar Hero</cite> &amp; <cite>Rock Band</cite></p>
 </hgroup>
@@ -19,7 +20,6 @@
 <li><a href="#arduino">Arduino</a></li>
 <li><a href="#hardware">Hardware</a></li>
 <li><a href="#success">Success!</a></li>
-<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
