--- a/projects/ledclock/index.html
+++ b/projects/ledclock/index.html
@@ -9,14 +9,15 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>LED Clock</h1>
 <p>A retro LED clock made with recycled parts</p>
 </hgroup>
-<nav>
+<!--<nav>
 <ul>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to [x]</a></li>
 </ul>
-</nav>
+</nav>-->
 </header>
 
 <main>
