--- a/projects/toybot/index.html
+++ b/projects/toybot/index.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>ToyBot</h1>
 <p>A toy car that drives around by itself</p>
 </hgroup>
@@ -17,7 +18,7 @@
 <li><a href="#overview">Overview</a></li>
 <li><a href="#hardware">Hardware</a></li>
 <li><a href="#behaviour">Behaviour</a></li>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Synth</a></li>
 </ul>
 </nav>
 </header>
