--- a/synth/dexy/firmware.html
+++ b/synth/dexy/firmware.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Dexy Firmware</h1>
 <p>Firmware for the <a href="index.html">Dexy</a> module</p>
 </hgroup>
@@ -19,7 +20,7 @@
 <li><a href="#synthesis">Synthesis</a></li>
 <li><a href="#notes">Notes</a></li>
 <li><a href="#tools">Tools</a></li>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Dexy</a></li>
 </ul>
 </nav>
 </header>
