--- a/synth/dexy/hardware.html
+++ b/synth/dexy/hardware.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Dexy Hardware</h1>
 <p>Hardware design of the <a href="index.html">Dexy</a> module</p>
 </hgroup>
@@ -19,7 +20,7 @@
 <li><a href="#pcbs">PCBs</a></li>
 <li><a href="#schematic">Schematic</a></li>
 <li><a href="#tools">Tools</a></li>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Dexy</a></li>
 </ul>
 </nav>
 </header>
