--- a/synth/dexy/index.html
+++ b/synth/dexy/index.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Dexy - DX7-Inspired FM</h1>
 <p>Digital FM voice with a Raspberry Pi Pico</p>
 </hgroup>
@@ -20,7 +21,7 @@
 <li><a href="software.html">Software</a></li>
 <li><a href="#patches">Patches</a></li>
 <li><a href="#license">License</a></li>
-<li><a href="/">Home</a></li>
+<li><a href="..">Back to Synth</a></li>
 </ul>
 </nav>
 </header>
