--- a/synth/dexy/performance.html
+++ b/synth/dexy/performance.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Dexy Firmware Performance</h1>
 <p>RP2040 firmware performance considerations</p>
 </hgroup>
@@ -19,7 +20,7 @@
 <li><a href="#arithmetic">Arithmetic</a></li>
 <li><a href="#tables">Tables</a></li>
 <li><a href="#flash">Flash</a></li>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Dexy</a></li>
 </ul>
 </nav>
 </header>
