--- a/synth/eurorack-bus-cv-gate.html
+++ b/synth/eurorack-bus-cv-gate.html
@@ -9,12 +9,13 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Eurorack CV &amp; Gate</h1>
 <p>Handling the Eurorack bus CV and gate signals</p>
 </hgroup>
 <nav>
 <ul>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Synth</a></li>
 </ul>
 </nav>
 </header>
