--- a/synth/firmware-programming.html
+++ b/synth/firmware-programming.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Firmware Programming</h1>
 <p>How to program the firmware in a digital module</p>
 </hgroup>
@@ -16,7 +17,7 @@
 <ul>
 <li><a href="#in-place">In-Place</a></li>
 <li><a href="#otherwise">Other</a></li>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Synth</a></li>
 </ul>
 </nav>
 </header>
