--- a/synth/index.html
+++ b/synth/index.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Synth</h1>
 <p>Designs for my homebrew Eurorack synthesizer modules</p>
 </hgroup>
@@ -17,7 +18,6 @@
 <li><a href="#info">Info</a></li>
 <li><a href="#modules">Modules</a></li>
 <li><a href="#misc">Other</a></li>
-<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
