--- a/synth/part-selection.html
+++ b/synth/part-selection.html
@@ -6,9 +6,10 @@
 <meta name="viewport" content="initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../css/site.css">
 </head>
-<body> <!-- Should only contain one each of <header>, <main>, and <footer> -->
-<header> <!-- Should only contain one each of <hgroup> and <nav> -->
+<body>
+<header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Component Selection</h1>
 <p>Which parts to use when building these modules</p>
 </hgroup>
@@ -17,7 +18,7 @@
 <li><a href="#jellybeans">Jellybeans</a></li>
 <li><a href="#opamps">Op Amps</a></li>
 <li><a href="#panels">Panels</a></li>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Synth</a></li>
 </ul>
 </nav>
 </header>
