--- a/synth/vco-calibration.html
+++ b/synth/vco-calibration.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>VCO Calibration</h1>
 <p>How to calibrate the VCO-2131 module</p>
 </hgroup>
@@ -18,7 +19,7 @@
 <li><a href="#params">Parameters</a></li>
 <li><a href="#prep">Preparation</a></li>
 <li><a href="#trimming">Trimming</a></li>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Synth</a></li>
 </ul>
 </nav>
 </header>
