--- a/_template.html
+++ b/_template.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Demo Page</h1>
 <p>A demo of a styled HTML page</p>
 </hgroup>
@@ -17,7 +18,7 @@
 <li><a href="#intro">Intro</a></li>
 <li><a href="#main">Main</a></li>
 <li><a href="#conclusion">Conclusion</a></li>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to [x]</a></li>
 </ul>
 </nav>
 </header>
