--- a/not_found.html
+++ b/not_found.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Error - Not Found</h1>
 <p>The requested page was not found.</p>
 </hgroup>
