--- a/synth/dexy/software.html
+++ b/synth/dexy/software.html
@@ -9,6 +9,7 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>DexyPatch Software</h1>
 <p>Patch editor for the <a href="index.html">Dexy</a> module</p>
 </hgroup>
@@ -18,7 +19,7 @@
 <li><a href="#notes">Notes</a></li>
 <li><a href="#screenshot">Screenshot</a></li>
 <li><a href="#tools">Tools</a></li>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Dexy</a></li>
 </ul>
 </nav>
 </header>
