--- a/synth/panels.html
+++ b/synth/panels.html
@@ -9,12 +9,13 @@
 <body>
 <header>
 <hgroup>
+<a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Front Panels</h1>
 <p>Front panels for my homebrew synth modules</p>
 </hgroup>
 <nav>
 <ul>
-<li><a href="/">Home</a></li>
+<li><a href=".">Back to Synth</a></li>
 </ul>
 </nav>
 </header>
