change a file name

--- a/synth/dexy/firmware.html
+++ b/synth/dexy/firmware.html
@@ -72,7 +72,7 @@ another operator’s frequency.</p>
 <p>Sine waves and envelopes are generated using wavetables.</p>
 
 <h1><a name="notes"></a>Notes</h1>
-<p>It was challenging to get the FM synthesis code to run fast enough to keep up with the 49 kHz sample rate. <a href="performance.html">Here are some notes about performance.</a></p>
+<p>It was challenging to get the FM synthesis code to run fast enough to keep up with the 49 kHz sample rate. <a href="firmware-performance.html">Here are some notes about performance.</a></p>
 
 <p>Another challenge was getting accurate results from the 12-bit ADC in the RP2040 so there is good (well, good enough) volt-per-octave pitch tracking across 10 octaves.
 <a href="https://lenp.net/dev/rp2040-adc-accuracy.html">More info here.</a></p>
