HTML fix in panels.html

--- a/synth/panels.html
+++ b/synth/panels.html
@@ -25,7 +25,7 @@
 <a href="https://delptronics.com/module-construction-set.php">Delptronics Module Construction Set</a>.
 This includes an alumin(i)um front panel with a drilling template printed on it.</p>
 
-<p></p>Other modules use PCBs that I designed, so the front panel is a PCB with holes.</p>
+<p>Other modules use PCBs that I designed, so the front panel is a PCB with holes.</p>
 
 <p>The graphics are designed in <a href="https://inkscape.org/">Inkscape</a>,
 laser printed on adhesive-backed paper, and covered with a clear adhesive
