--- a/synth/index.html
+++ b/synth/index.html
@@ -54,6 +54,8 @@ project and source file.</p>
 <dl class="inline">
     <dt><a href="dexy">Dexy</a></dt>
     <dd>DX7-inspired FM synthesis with a Raspberry Pi Pico</dd>
+    <dt><a href="proto-module.html">ProtoModule</a></dt>
+    <dd>Breadboard prototyping module</dd>
     <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Filter2#readme">Filter2</a></dt>
     <dd>Dual filter module</dd>
     <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Switches#readme">Switches</a></dt>
