Collapsible linkline implementation

--- a/site-files/_template.html
+++ b/site-files/_template.html
@@ -14,11 +14,13 @@
 <p>A demo of a styled HTML page</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#intro">Intro</a></li>
 <li><a href="#main">Main</a></li>
 <li><a href="#conclusion">Conclusion</a></li>
-<li><a href=".">Back to [x]</a></li>
+<li>Back to <a href=".">[x]</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
