Collapsible linkline on all pages

--- a/site-files/dev/rp2040-adc-accuracy.html
+++ b/site-files/dev/rp2040-adc-accuracy.html
@@ -14,6 +14,7 @@
 <p>Getting the most out of an analog-to-digital converter</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#background">Background</a></li>
 <li><a href="#problems">Problems</a></li>
