--- a/site-files/dev/rp2040-dev-setup.html
+++ b/site-files/dev/rp2040-dev-setup.html
@@ -14,6 +14,7 @@
 <p>C/C++ dev environment for the Raspberry Pi Pico and RP2040, on Windows</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#toolchain">Toolchain</a></li>
 <li><a href="#project">Project</a></li>
