--- a/site-files/index.html
+++ b/site-files/index.html
@@ -14,6 +14,7 @@
 <p>It’s gonna be the future soon</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#projects">Projects</a></li>
 <li><a href="#programming">Programming</a></li>
