--- a/site-files/not_found.html
+++ b/site-files/not_found.html
@@ -13,7 +13,8 @@
 <h1>Error - Not Found</h1>
 <p>The requested page was not found.</p>
 </hgroup>
-<nav><ul><li><a href="/"> Home</a></li></ul></nav>
+<nav><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
+<ul><li><a href="/"> Home</a></li></ul></nav>
 </header>
 </body>
 </html>
