--- a/site-files/projects/ledclock/index.html
+++ b/site-files/projects/ledclock/index.html
@@ -13,11 +13,10 @@
 <h1>LED Clock</h1>
 <p>A retro LED clock made with recycled parts</p>
 </hgroup>
-<!--<nav>
-<ul>
-<li><a href=".">Back to [x]</a></li>
-</ul>
-</nav>-->
+<nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
+<ul><li><a href="/">Home</a></li></ul>
+</nav>
 </header>
 
 <main>
