--- a/site-files/projects/toybot/index.html
+++ b/site-files/projects/toybot/index.html
@@ -14,6 +14,7 @@
 <p>A toy car that drives around by itself</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#overview">Overview</a></li>
 <li><a href="#hardware">Hardware</a></li>
