--- a/site-files/synth/dexy/firmware.html
+++ b/site-files/synth/dexy/firmware.html
@@ -14,6 +14,7 @@
 <p>Firmware for the <a href="index.html">Dexy</a> module</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#building">Building</a></li>
 <li><a href="#overview">Overview</a></li>
