--- a/site-files/synth/firmware-programming.html
+++ b/site-files/synth/firmware-programming.html
@@ -14,6 +14,7 @@
 <p>How to program the firmware in a digital module</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#in-place">In-Place</a></li>
 <li><a href="#otherwise">Other</a></li>
