--- a/site-files/synth/grounding-plug.html
+++ b/site-files/synth/grounding-plug.html
@@ -14,6 +14,7 @@
 <p>Simple input grounding plug for my homebrew Eurorack synth</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href=".">Back to Synth</a></li>
 </ul>
