--- a/site-files/synth/index.html
+++ b/site-files/synth/index.html
@@ -14,6 +14,7 @@
 <p>Designs for my homebrew Eurorack synthesizer modules</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#info">Info</a></li>
 <li><a href="#modules">Modules</a></li>
