--- a/site-files/synth/panels.html
+++ b/site-files/synth/panels.html
@@ -14,6 +14,7 @@
 <p>Front panels for my homebrew synth modules</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href=".">Back to Synth</a></li>
 </ul>
