--- a/site-files/synth/part-selection.html
+++ b/site-files/synth/part-selection.html
@@ -14,6 +14,7 @@
 <p>Which parts to use when building these modules</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#jellybeans">Jellybeans</a></li>
 <li><a href="#opamps">Op Amps</a></li>
