--- a/site-files/projects/daveybot/index.html
+++ b/site-files/projects/daveybot/index.html
@@ -14,6 +14,7 @@
 <p>A computer that plays <cite>Guitar Hero</cite> &amp; <cite>Rock Band</cite></p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#overview">Overview</a></li>
 <li><a href="#software">Software</a></li>
