--- a/site-files/synth/dexy/firmware-performance.html
+++ b/site-files/synth/dexy/firmware-performance.html
@@ -14,6 +14,7 @@
 <p>RP2040 firmware performance considerations</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#intro">Overview</a></li>
 <li><a href="#cores">Cores</a></li>
