--- a/site-files/synth/dexy/hardware.html
+++ b/site-files/synth/dexy/hardware.html
@@ -14,6 +14,7 @@
 <p>Hardware design of the <a href="index.html">Dexy</a> module</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#features">Features</a></li>
 <li><a href="#notes">Notes</a></li>
