--- a/site-files/synth/dexy/index.html
+++ b/site-files/synth/dexy/index.html
@@ -14,6 +14,7 @@
 <p>Digital FM voice with a Raspberry Pi Pico</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#features">Features</a></li>
 <li><a href="hardware.html">Hardware</a></li>
