--- a/site-files/synth/eurorack-bus-cv-gate.html
+++ b/site-files/synth/eurorack-bus-cv-gate.html
@@ -14,6 +14,7 @@
 <p>Handling the Eurorack bus CV and gate signals</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href=".">Back to Synth</a></li>
 </ul>
