--- a/site-files/synth/proto-module.html
+++ b/site-files/synth/proto-module.html
@@ -14,6 +14,7 @@
 <p>A breadboard prototyping module for Eurorack</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href=".">Back to Synth</a></li>
 </ul>
