--- a/site-files/synth/vco-calibration.html
+++ b/site-files/synth/vco-calibration.html
@@ -14,6 +14,7 @@
 <p>How to calibrate the VCO-2131 module</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#equipment">Equipment</a></li>
 <li><a href="#params">Parameters</a></li>
