Restore "Home" links on all linklines

--- a/site-files/projects/daveybot/index.html
+++ b/site-files/projects/daveybot/index.html
@@ -21,6 +21,7 @@
 <li><a href="#arduino">Arduino</a></li>
 <li><a href="#hardware">Hardware</a></li>
 <li><a href="#success">Success!</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
