--- a/site-files/synth/dexy/firmware-performance.html
+++ b/site-files/synth/dexy/firmware-performance.html
@@ -21,7 +21,8 @@
 <li><a href="#arithmetic">Arithmetic</a></li>
 <li><a href="#tables">Tables</a></li>
 <li><a href="#flash">Flash</a></li>
-<li><a href=".">Back to Dexy</a></li>
+<li>Back to <a href=".">Dexy</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
