--- a/site-files/synth/dexy/firmware.html
+++ b/site-files/synth/dexy/firmware.html
@@ -21,7 +21,8 @@
 <li><a href="#synthesis">Synthesis</a></li>
 <li><a href="#notes">Notes</a></li>
 <li><a href="#tools">Tools</a></li>
-<li><a href=".">Back to Dexy</a></li>
+<li>Back to <a href=".">Dexy</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
