--- a/site-files/synth/firmware-programming.html
+++ b/site-files/synth/firmware-programming.html
@@ -18,7 +18,8 @@
 <ul>
 <li><a href="#in-place">In-Place</a></li>
 <li><a href="#otherwise">Other</a></li>
-<li><a href=".">Back to Synth</a></li>
+<li>Back to <a href=".">Synth</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
