--- a/site-files/synth/index.html
+++ b/site-files/synth/index.html
@@ -19,6 +19,7 @@
 <li><a href="#info">Info</a></li>
 <li><a href="#modules">Modules</a></li>
 <li><a href="#misc">Other</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
