--- a/site-files/dev/rp2040-adc-accuracy.html
+++ b/site-files/dev/rp2040-adc-accuracy.html
@@ -20,6 +20,7 @@
 <li><a href="#problems">Problems</a></li>
 <li><a href="#fixes">Fixes</a></li>
 <li><a href="#results">Results</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
