--- a/site-files/dev/rp2040-dev-setup.html
+++ b/site-files/dev/rp2040-dev-setup.html
@@ -18,6 +18,7 @@
 <ul>
 <li><a href="#toolchain">Toolchain</a></li>
 <li><a href="#project">Project</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
