--- a/site-files/projects/toybot/index.html
+++ b/site-files/projects/toybot/index.html
@@ -19,7 +19,7 @@
 <li><a href="#overview">Overview</a></li>
 <li><a href="#hardware">Hardware</a></li>
 <li><a href="#behaviour">Behaviour</a></li>
-<li><a href=".">Back to Synth</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
