--- a/site-files/synth/dexy/hardware.html
+++ b/site-files/synth/dexy/hardware.html
@@ -21,7 +21,8 @@
 <li><a href="#pcbs">PCBs</a></li>
 <li><a href="#schematic">Schematic</a></li>
 <li><a href="#tools">Tools</a></li>
-<li><a href=".">Back to Dexy</a></li>
+<li>Back to <a href=".">Dexy</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
