--- a/site-files/synth/dexy/index.html
+++ b/site-files/synth/dexy/index.html
@@ -22,7 +22,8 @@
 <li><a href="software.html">Software</a></li>
 <li><a href="#patches">Patches</a></li>
 <li><a href="#license">License</a></li>
-<li><a href="..">Back to Synth</a></li>
+<li>Back to <a href="..">Synth</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
