--- a/site-files/synth/dexy/software.html
+++ b/site-files/synth/dexy/software.html
@@ -20,7 +20,8 @@
 <li><a href="#notes">Notes</a></li>
 <li><a href="#screenshot">Screenshot</a></li>
 <li><a href="#tools">Tools</a></li>
-<li><a href=".">Back to Dexy</a></li>
+<li>Back to <a href=".">Dexy</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
