--- a/site-files/synth/part-selection.html
+++ b/site-files/synth/part-selection.html
@@ -19,7 +19,8 @@
 <li><a href="#jellybeans">Jellybeans</a></li>
 <li><a href="#opamps">Op Amps</a></li>
 <li><a href="#panels">Panels</a></li>
-<li><a href=".">Back to Synth</a></li>
+<li>Back to <a href=".">Synth</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
