--- a/site-files/synth/proto-module.html
+++ b/site-files/synth/proto-module.html
@@ -16,7 +16,8 @@
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
-<li><a href=".">Back to Synth</a></li>
+<li>Back to <a href=".">Synth</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
