--- a/site-files/synth/vco-calibration.html
+++ b/site-files/synth/vco-calibration.html
@@ -20,7 +20,8 @@
 <li><a href="#params">Parameters</a></li>
 <li><a href="#prep">Preparation</a></li>
 <li><a href="#trimming">Trimming</a></li>
-<li><a href=".">Back to Synth</a></li>
+<li>Back to <a href=".">Synth</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
