asentry: update with new linkline

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -14,10 +14,12 @@
 <p>Device to warn of potential asteroid impacts</p>
 </hgroup>
 <nav>
+<!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#intro">Intro</a></li>
 <li><a href="#main">Main</a></li>
 <li><a href="#conclusion">Conclusion</a></li>
+<li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
