asentry project page - wip

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -16,7 +16,7 @@
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
-<li><a href="#intro">Intro</a></li>
+<li><a href="#overview">Overview</a></li>
 <li><a href="#main">Main</a></li>
 <li><a href="#conclusion">Conclusion</a></li>
 <li><a href="/">Home</a></li>
@@ -25,8 +25,13 @@
 </header>
 
 <main>
-<h1><a name="intro"></a>Intro</h1>
-<p>Introduction.</p>
+<aside><img src="asentry.jpg" alt="asentry device"></aside>
+<h1><a name="overview"></a>Overview</h1>
+<p>This device uses a Raspberry Pi Pico W and CircuitPython to monitor NASA JPL’s <a href="https://cneos.jpl.nasa.gov/sentry/">Sentry</a> service and warn of potential Earth-threatening asteroids.</p>
+
+<aside>
+<p>If you want to do this on your computer instead of a stand-alone device, there’s <a href="https://github.com/Len42/asentry">a Python program</a> for that.</p>
+</aside>
 
 <h1><a name="main"></a>Main</h1>
 <p>Main section.</p>
