asentry project page - wip

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -17,27 +17,25 @@
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
 <li><a href="#overview">Overview</a></li>
-<li><a href="#main">Main</a></li>
-<li><a href="#conclusion">Conclusion</a></li>
+<li><a href="#hardware">Hardware</a></li>
+<li><a href="#firmware">Firmware</a></li>
 <li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
 
 <main>
-<aside><img src="asentry.jpg" alt="asentry device"></aside>
+<aside><a href="asentry.jpg"><img src="asentry.jpg" alt="asentry device"></a></aside>
 <h1><a name="overview"></a>Overview</h1>
-<p>This device uses a Raspberry Pi Pico W and CircuitPython to monitor NASA JPL’s <a href="https://cneos.jpl.nasa.gov/sentry/">Sentry</a> service and warn of potential Earth-threatening asteroids.</p>
+<p>This device uses a LINK Raspberry Pi Pico W and LINK CircuitPython to monitor NASA JPL’s <a href="https://cneos.jpl.nasa.gov/sentry/">Sentry</a> service and warn of potential Earth-threatening asteroids.</p>
 
-<aside>
-<p>If you want to do this on your computer instead of a stand-alone device, there’s <a href="https://github.com/Len42/asentry">a Python program</a> for that.</p>
-</aside>
+<aside><p>If you want to do this on your computer instead of a stand-alone device, there’s <a href="https://github.com/Len42/asentry">a Python program</a> for that.</p></aside>
 
-<h1><a name="main"></a>Main</h1>
-<p>Main section.</p>
+<h1><a name="hardware"></a>Hardware</h1>
+<p>Blah blah.</p>
 
-<h1><a name="conclusion"></a>Conclusion</h1>
-<p>Final section.</p>
+<h1><a name="firmware"></a>Firmware</h1>
+<p>Blah blah.</p>
 </main>
 
 <footer><g-row><g-col style="width: 110px; vertical-align: middle">
