--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -27,7 +27,11 @@
 <main>
 <aside><a href="asentry.jpg"><img src="asentry.jpg" alt="asentry device"></a></aside>
 <h1><a name="overview"></a>Overview</h1>
-<p>This device uses a LINK Raspberry Pi Pico W and LINK CircuitPython to monitor NASA JPL’s <a href="https://cneos.jpl.nasa.gov/sentry/">Sentry</a> service and warn of potential Earth-threatening asteroids.</p>
+<p>This device uses a
+<a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html#raspberry-pi-pico-w-and-pico-wh">Raspberry Pi Pico W</a>
+and <a href="https://circuitpython.org/">CircuitPython</a>
+to monitor NASA JPL’s <a href="https://cneos.jpl.nasa.gov/sentry/">Sentry</a> service
+and warn of potential Earth-threatening asteroids.</p>
 
 <aside><p>If you want to do this on your computer instead of a stand-alone device, there’s <a href="https://github.com/Len42/asentry">a Python program</a> for that.</p></aside>
 
@@ -36,6 +40,7 @@
 
 <h1><a name="firmware"></a>Firmware</h1>
 <p>Blah blah.</p>
+<p><a href="https://github.com/Len42/asentry-gadget/releases/latest/download/firmware.zip">firmware files</a></p>
 </main>
 
 <footer><g-row><g-col style="width: 110px; vertical-align: middle">
