--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -26,6 +26,7 @@
 
 <main>
 <aside><a href="asentry.jpg"><img src="asentry.jpg" alt="asentry device"></a></aside>
+
 <h1><a name="overview"></a>Overview</h1>
 <p>This device uses a
 <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html#raspberry-pi-pico-w-and-pico-wh">Raspberry Pi Pico W</a>
@@ -35,11 +36,16 @@ and warn of potential Earth-threatening asteroids.</p>
 
 <aside><p>If you want to do this on your computer instead of a stand-alone device, there’s <a href="https://github.com/Len42/asentry">a Python program</a> for that.</p></aside>
 
+Source files for this project are on <a href="https://github.com/Len42/asentry-gadget">GitHub</a>.
+
 <h1><a name="hardware"></a>Hardware</h1>
 <p>Blah blah.</p>
 
 <h1><a name="firmware"></a>Firmware</h1>
 <p>Blah blah.</p>
+<h2>Installing CircuitPython</h2>
+<p></p>CiruitPython must be installed on the Pi Pico W, if it isn’t already.
+<a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/installing-circuitpython">Click here for instructions.</a></p>
 <p><a href="https://github.com/Len42/asentry-gadget/releases/latest/download/firmware.zip">firmware files</a></p>
 </main>
 
