asentry project page - wip

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -41,12 +41,19 @@ Source files for this project are on <a href="https://github.com/Len42/asentry-g
 <h1><a name="hardware"></a>Hardware</h1>
 <p>Blah blah.</p>
 
+<a href="wiring.png"><img src="wiring.png" alt="wiring diagram" width="510" height="390"></a>
+
 <h1><a name="firmware"></a>Firmware</h1>
 <p>Blah blah.</p>
 <h2>Installing CircuitPython</h2>
 <p></p>CiruitPython must be installed on the Pi Pico W, if it isn’t already.
 <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/installing-circuitpython">Click here for instructions.</a></p>
-<p><a href="https://github.com/Len42/asentry-gadget/releases/latest/download/firmware.zip">firmware files</a></p>
+
+<h2>Installing the Firmware</h2>
+<p>TODO: <a href="https://github.com/Len42/asentry-gadget/releases/latest/download/firmware.zip">firmware files</a></p>
+
+TODO: settings.toml
+
 </main>
 
 <footer><g-row><g-col style="width: 110px; vertical-align: middle">
