asentry project page - wip

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -40,14 +40,14 @@ and warn of potential Earth-threatening asteroids. Know when to panic!
 <p>This project is based on <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython">a project by Jeff Epler</a>.</p>
 
 <h1><a name="hardware"></a>Hardware</h1>
-<aside><p>If you want to do this on your computer instead of a stand-alone device, there’s <a href="https://github.com/Len42/asentry">a Python program</a> for that.</p></aside>
+<aside><p>If you want to do this on your computer instead of using a stand-alone device, there’s <a href="https://github.com/Len42/asentry">a Python program</a> for that.</p></aside>
 
-<p>The Pi Pico W connects to the internet via wifi, and it is also connected to an OLED display, an I2S audio amplifier, and a pushbutton. A PiCowbell proto board holds things together.</p>
+<p>The Pico W connects to the internet via wifi, and it is also connected to an OLED display, an I2S audio amplifier, and a pushbutton. A PiCowbell proto board holds things together.</p>
 
 <aside><a href="wiring.png"><img src="wiring.png" alt="wiring diagram"></a></aside>
 <p>Here is a wiring diagram showing how the components are connected. Note that special cables are used for the OLED display and the speaker.</p>
 
-<p>The Pi Pico W is stacked on top of the PiCowbell board using header connectors, as shown below.</p>
+<p>The Pico W is stacked on top of the PiCowbell board using header connectors, as shown below.</p>
 <g-row>
 <g-col><a href="picowbell1.jpg"><img src="picowbell1.jpg" alt="Pico W and PiCowbell"></a></g-col>
 <g-col><a href="picowbell2.jpg"><img src="picowbell2.jpg" alt="Pico W and PiCowbell"></a></g-col>
@@ -60,7 +60,7 @@ and warn of potential Earth-threatening asteroids. Know when to panic!
 <h1><a name="firmware"></a>Firmware</h1>
 <p>Blah blah.</p>
 <h2>Installing CircuitPython</h2>
-<p></p>CiruitPython must be installed on the Pi Pico W, if it isn’t already.
+<p></p>CiruitPython must be installed on the Pico W, if it isn’t already.
 <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/installing-circuitpython">Click here for instructions.</a></p>
 
 <h2>Installing the Firmware</h2>
