Synth: Add a link to the VCO calibration page

--- a/site-files/synth/index.html
+++ b/site-files/synth/index.html
@@ -46,6 +46,8 @@ project and source file.</p>
     <dd>Spaghetti reduction</dd>
     <dt><a href="firmware-programming.html">Firmware Programming</a></dt>
     <dd>How to program the firmware onto the microcontrollers in some modules</dd>
+    <dt><a href="vco-calibration.html">VCO Calibration</a></dt>
+    <dd>How to calibrate the voltage-controlled oscillator module</dd>
     <dt><a href="https://github.com/Len42/Synth/discussions">Discussions</a></dt>
     <dd>Forum for questions, comments, and conversations</dd>
     </dl>
