--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -36,7 +36,7 @@ to make a device that monitors NASA JPL’s
 and warns of potential Earth-threatening asteroids. This is a description of how it’s made.
 Know when to panic! <no-wrap>🌎🌠😱</no-wrap></p>
 
-<p>Source code and design files for this project are on <a href="https://github.com/Len42/asentry-gadget">GitHub</a>.</p>
+<p>Source code and design files for this project are available <a href="https://github.com/Len42/asentry-gadget">on GitHub</a>.</p>
 
 <p>This device is based on <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython">a project by Jeff Epler</a>.</p>
 
@@ -65,17 +65,30 @@ holds things together.</p>
 <p>TODO: BOM, including cables & connectors</p>
 
 <h1><a name="firmware"></a>Firmware</h1>
-<p>Blah blah.</p>
+<p>The firmware that runs on the Pico W has to perform several tasks:</p>
+<ul>
+<li>Send HTTP requests to NASA's Sentry web service</li>
+<li>Parse the result data, which is in JSON format</li>
+<li>Display alert messages on the OLED display</li>
+<li>Play alarm sounds using the I2S amplifier</li>
+</ul>
+<p><a href="https://circuitpython.org/">CircuitPython</a> makes it easy to write code to do all of that.</p>
+
 <h2>Installing CircuitPython</h2>
 <p></p>CiruitPython must be installed on the Pico W, if it isn’t already.
 <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/installing-circuitpython">Click here for instructions.</a></p>
 
-<h2>Installing the Firmware</h2>
+<h2>Installing the Code</h2>
 <p>TODO: <a href="https://github.com/Len42/asentry-gadget/releases/latest/download/firmware.zip">firmware files</a></p>
+<p>similar instructions: https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/coding-the-text-generator</p>
 
 <p>TODO: settings.toml</p>
 
 <p>TODO: alert.wav</p>
+
+<h2>Code Details</h2>
+
+<p>TODO: API doc https://ssd-api.jpl.nasa.gov/doc/sentry.html</p>
 
 </main>
 
