asentry project page - wip

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -19,6 +19,7 @@
 <li><a href="#overview">Overview</a></li>
 <li><a href="#hardware">Hardware</a></li>
 <li><a href="#firmware">Firmware</a></li>
+<li><a href="#case">Case</a></li>
 <li><a href="/">Home</a></li>
 </ul>
 </nav>
@@ -49,10 +50,12 @@ an <a href="https://www.adafruit.com/product/938">OLED display</a>,
 an <a href="https://www.adafruit.com/product/5770">I2S audio amplifier</a>,
 and a pushbutton.
 A <a href="https://www.adafruit.com/product/5200">PiCowbell proto board</a>
-holds things together.</p>
+hooks things together.</p>
 
 <aside><a href="wiring.png"><img src="wiring.png" alt="wiring diagram"></a></aside>
-<p>Here is a wiring diagram showing how the components are connected. Note that special cables are used for the OLED display and the speaker.</p>
+<p>Here is a wiring diagram showing how the components are connected.
+(<a href="https://github.com/Len42/asentry-gadget/raw/main/hardware/asentry.fzz">The Fritzing file is here.</a>)
+Note that special cables are used for the OLED display and the speaker.</p>
 
 <p>The Pico W is stacked on top of the PiCowbell board using header connectors, as shown below.</p>
 <g-row>
@@ -75,10 +78,10 @@ holds things together.</p>
 <p><a href="https://circuitpython.org/">CircuitPython</a> makes it easy to write code to do all of that.</p>
 
 <h2>Installing CircuitPython</h2>
-<p></p>CiruitPython must be installed on the Pico W, if it isn’t already.
+<p></p>CircuitPython must be installed on the Pico W, if it isn’t already.
 <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/installing-circuitpython">Click here for instructions.</a></p>
 
-<h2>Installing the Code</h2>
+<h2>Downloading the Code</h2>
 <p>TODO: <a href="https://github.com/Len42/asentry-gadget/releases/latest/download/firmware.zip">firmware files</a></p>
 <p>similar instructions: https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/coding-the-text-generator</p>
 
@@ -89,6 +92,9 @@ holds things together.</p>
 <h2>Code Details</h2>
 
 <p>TODO: API doc https://ssd-api.jpl.nasa.gov/doc/sentry.html</p>
+
+<h1><a name="case"></a>Case</h1>
+<p>TODO</p>
 
 </main>
 
