Synth: Add LFO-Analog module

--- a/site-files/synth/index.html
+++ b/site-files/synth/index.html
@@ -92,6 +92,8 @@ project and source file.</p>
     <dd>Dual ADSR envelope module, microcontroller-based</dd>
     <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Wavefolder#readme">Wavefolder</a></dt>
     <dd>Dual analog wavefolder module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/LFO-Analog#readme">LFO-Analog</a></dt>
+    <dd>Dual analog LFO</dd>
     <dt><a href="https://github.com/Len42/Synth/tree/main/modules/LFO-DigiVC#readme">LFO-DigiVC</a></dt>
     <dd>Voltage-controlled LFO, microcontroller-based</dd>
     <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Noise-SH#readme">Noise-SH</a></dt>
