asentry project page - wip

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -52,10 +52,15 @@ and a pushbutton.
 A <a href="https://www.adafruit.com/product/5200">PiCowbell proto board</a>
 hooks things together.</p>
 
-<aside><a href="wiring.png"><img src="wiring.png" alt="wiring diagram"></a></aside>
-<p>Here is a wiring diagram showing how the components are connected.
-(<a href="https://github.com/Len42/asentry-gadget/raw/main/hardware/asentry.fzz">The Fritzing file is here.</a>)
-Note that special cables are used for the OLED display and the speaker.</p>
+<p>Here is a wiring diagram and photo showing how the components are connected.
+(<a href="https://github.com/Len42/asentry-gadget/raw/main/hardware/asentry.fzz">A Fritzing file is here.</a>)</p>
+<g-row>
+<g-col><a href="wiring1.png"><img src="wiring1.png" alt="wiring diagram"></a></g-col>
+<g-col><a href="wiring2.jpg"><img src="wiring2.jpg" alt="wiring photo"></a></g-col>
+</g-row>
+
+<p>Note that special cables are used for the OLED display and the speaker.</p>
+TODO: header connectors vs soldered connections
 
 <p>The Pico W is stacked on top of the PiCowbell board using header connectors, as shown below.</p>
 <g-row>
@@ -92,6 +97,8 @@ Note that special cables are used for the OLED display and the speaker.</p>
 <h2>Code Details</h2>
 
 <p>TODO: API doc https://ssd-api.jpl.nasa.gov/doc/sentry.html</p>
+
+<p>TODO: Python code: https://github.com/Len42/asentry-gadget/blob/main/firmware/code.py</p>
 
 <h1><a name="case"></a>Case</h1>
 <p>TODO</p>
